--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 .items {
     position: relative;
     width:  100%;
-    height: 400px;
+    height: 397px;
     display: flex;
 }
 
@@ -107,7 +107,13 @@
 
 .list-image{
     position: relative;
-    background-color: red;
     height: 400px;
     width: 300px;
+}
+
+.list-image img{
+    width: 100%;
+    height: calc(400px / 5);
+    object-fit: cover;
+    margin-bottom: -4px;
 }
