--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    user-select: none;
+}
+
 .container {
     width: 900px;
     height: 100vh;
@@ -119,7 +123,7 @@
     object-fit: cover;
     margin-bottom: -4px;
     filter: brightness(0.5);
-    transition-duration: 1s;
+    transition-duration: 0.75s;
     
 }
 
